--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,47 @@
 /* Enter your Styles below! */
+body {
+	background-image: url(../images/website-background-b.png);
+	background-size:cover;
+	background-repeat: no-repeat;
+}
+
+a {
+	text-decoration: none;
+}
+
+nav ul{
+	list-style-type: none;
+}
+
+nav li{
+	font-family: 'Varela Round', sans-serif;
+	display: inline-block;
+	margin-left: 40px;
+	font-size:24px;
+	color:003333;
+	margin-top: 45px;	
+	padding-right: 80px;
+}
+
+nav{
+	display: grid;
+	grid-template-columns: 50% 50%;	
+}
+
+h1{
+	font-family: 'Varela Round', sans-serif;
+	color:#FF3925;
+	font-size: 60px;
+	padding:20px;	
+	margin-left:30px;
+	font-weight: bold;	
+}
+
+ul.bottom-list {
+	list-style-type:none;
+	font-family: 'Varela Round', sans-serif;
+	display: inline-block;
+	margin-left: 40px;
+	font-size:24px;
+	color:003333;
+}
