--- a/css/style.css
+++ b/css/style.css
@@ -13,35 +13,45 @@ a {
 
 nav ul{
 	list-style-type: none;
+	justify-content: right;
 	
 }
 
-nav li{
+nav li {
 	font-family: 'Varela Round', sans-serif;
 	display: inline-block;
 	font-size:20px;
-	color:white;
+	color: #FF3925;
 	margin-top: 45px;	
 	text-align: center;
+	margin: 0;
 }
+
+nav a {color: #FF3925;}
 
 nav{
 	display: grid;
-	grid-template-columns: 30% 570%;	
-
+	grid-template-columns: 40% 60%;	
 }
 
+nav h1 img {
+	margin: 0;
+	width: 80px;
+	display: inline-block;
+	margin-right: 10px;
+}
 h1{
 	font-family: 'Varela Round', sans-serif;
 	color:#FF3925;
 	font-size: 60px;
 	font-weight: bold;
-	-webkit-text-stroke-width: 2px;
+	-webkit-text-stroke-width: 1px;
 	-webkit-text-stroke-color:black;
 	padding:20px;	
 	margin-left:30px;
-	font-weight: bold;	
+	font-weight: bold;
 }
+ul a{color: #FF3925;}
 
 ul.bottom-list {
 	list-style-type:none;
@@ -51,6 +61,7 @@ ul.bottom-list {
 	color:003333;
 	width: 100%;
 	padding-bottom: 20px
+	padding-top:20px;
 }
 
 li{
@@ -59,6 +70,7 @@ li{
 	margin-left: 40px;
 	font-size:24px;
 	padding-left: 130px;
+	padding-top: 30px;
 }
 
 div{
@@ -66,7 +78,6 @@ div{
 }
 
 img {
-	height: 100%;
 	width: 100%;
 	 display: block;
   margin-left: auto;
@@ -77,14 +88,15 @@ img {
 
 
 h2{
-	font-family: 'Nunito', sans-serif;
-	font-weight: bold;
+	font-family: 'Raleway', sans-serif;
+	font-weight: bolder;
 	font-size: 26px;	
+	margin-bottom: 4px;
 
 }
 
 p{
-	font-family: 'Nunito', sans-serif;
+	font-family: 'Raleway', sans-serif;
 
 }
 
@@ -104,17 +116,16 @@ p.about{
 	font-family: 'Varela Round', sans-serif;
 	text-indent: 3%;
 	padding-top:50px;
-	margin-left: 30px;	
-	margin-right: 30px;
-
+	margin-left: 200px;	
+	margin-right: 200px;
 }
 
 p.about-two{
 		font-family: 'Varela Round', sans-serif;
 	text-indent: 3%;
 	padding-bottom:50px;
-	margin-left: 30px;	
-	margin-right: 30px;
+	margin-left: 200px;	
+	margin-right: 200px;
 	}
 
 img.menu{
@@ -126,6 +137,7 @@ img.menu{
 img.sushi-one{
 	float:left;
 	margin:4%;
+	padding-left: 20px;
 }
 
 img.home{
@@ -136,9 +148,47 @@ img.home{
 div.grid-item{
 	float:right;
 	padding-top: 80px;
+	padding-left: 80px;
 }
 
 section{
 	display:grid;
 	grid-template-columns:50% 50%
+}
+
+div.image{
+padding-bottom: 30px;
+}
+
+.grid-item{
+	padding-left: 100px
+	padding-top: 40px;
+	padding-right: 40px;
+}
+
+.grid-item .sushi-one{
+	height:80%;
+	width: 80%;
+	padding-left: 100px;
+}
+
+.grid-item .sushi-two{
+	height:80%;
+	width: 80%;
+	padding-left: 100px;
+	
+}
+
+.grid-item .sushi-three{
+	height:80%;
+	width: 80%;
+	padding-left: 100px;
+	
+}
+
+.grid-item .sushi-four{
+	height:80%;
+	width: 80%;
+	padding-left: 100px;
+	
 }
